--- a/index.html
+++ b/index.html
@@ -116,12 +116,14 @@
     </header>
     <main>
       <!--HERO-->
-      <!-- <section class="hero section">
-      <div class="container">
-        <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="btn " data-modal-open>Замовити послугу</button>
-      </div>
-    </section> -->
+      <section class="hero section">
+        <div class="container">
+          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="btn" data-modal-open>
+            Замовити послугу
+          </button>
+        </div>
+      </section>
       <!--Преимущества компании -->
       <!-- <section class="section">
       <div class="container">
