--- a/index.html
+++ b/index.html
@@ -472,49 +472,84 @@
     </div>
   </footer> -->
 
-    <!-- <div class="backdrop is-hidden " data-modal>
-    <div class="modal">
-      <button type="button" class="modal-close-btn" data-modal-close>
-        <svg class="modal-close-btn-icon">
-          <use href="./image/icon/sprites.svg#icon-close"></use>
-        </svg>
-      </button>
-      <form class="modal-form" autocomplete="off">
-        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
-        <label for="user_name" class="caption-form">Ім'я</label>
-        <div class="caption-form-write">
-          <input type="text" name="user_name" id="user_name" class="caption-form-input" pattern="[a-zA-Zа-яА-ЯіІїЇ]+"
-            minlength="2" required>
-          <svg class="modal-form-icon">
-            <use href="./image/icon/sprites.svg#icon-person"></use>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-btn-icon">
+            <use href="./image/icon/sprites.svg#icon-close"></use>
           </svg>
-        </div>
-        <label for="user-phone" class="caption-form">Телефон</label>
-        <div class="caption-form-write">
-          <input type="tel" name="user_phone" id="user-phone" class="caption-form-input" pattern="[0-9]+" required>
-          <svg class="modal-form-icon">
-            <use href="./image/icon/sprites.svg#icon-phone"></use>
-          </svg>
-        </div>
-        <label for="user-email" class="caption-form">Пошта</label>
-        <div class="caption-form-write">
-          <input type="email" name="user_email" id="user-email" class="caption-form-input" required>
-          <svg class="modal-form-icon">
-            <use href="./image/icon/sprites.svg#icon-dark-mail"></use>
-          </svg>
-        </div>
-        <label for="user-comment" class="caption-form">Коментар</label>
-        <textarea name="user_comment" id="user-comment" placeholder="Введіть текст"
-          class="caption-form-comment"></textarea>
-        <input type="checkbox" name="agree_license" id="agree-license" class="modal-form-check hidden-title" required>
-        <label for="agree-license" class="agreed-license">Погоджуюся з розсилкою та приймаю&nbsp<a href=""
-            class="agreed-license__link link">Умови договору</a></label>
-        <button type="submit" class="modal-send-btn">Відправити</button>
-      </form>
+        </button>
+        <form class="modal-form" autocomplete="off">
+          <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+          <label for="user_name" class="caption-form">Ім'я</label>
+          <div class="caption-form-write">
+            <input
+              type="text"
+              name="user_name"
+              id="user_name"
+              class="caption-form-input"
+              pattern="[a-zA-Zа-яА-ЯіІїЇ]+"
+              minlength="2"
+              required
+            />
+            <svg class="modal-form-icon">
+              <use href="./image/icon/sprites.svg#icon-person"></use>
+            </svg>
+          </div>
+          <label for="user-phone" class="caption-form">Телефон</label>
+          <div class="caption-form-write">
+            <input
+              type="tel"
+              name="user_phone"
+              id="user-phone"
+              class="caption-form-input"
+              pattern="[0-9]+"
+              required
+            />
+            <svg class="modal-form-icon">
+              <use href="./image/icon/sprites.svg#icon-phone"></use>
+            </svg>
+          </div>
+          <label for="user-email" class="caption-form">Пошта</label>
+          <div class="caption-form-write">
+            <input
+              type="email"
+              name="user_email"
+              id="user-email"
+              class="caption-form-input"
+              required
+            />
+            <svg class="modal-form-icon">
+              <use href="./image/icon/sprites.svg#icon-dark-mail"></use>
+            </svg>
+          </div>
+          <label for="user-comment" class="caption-form">Коментар</label>
+          <textarea
+            name="user_comment"
+            id="user-comment"
+            placeholder="Введіть текст"
+            class="caption-form-comment"
+          ></textarea>
+          <input
+            type="checkbox"
+            name="agree_license"
+            id="agree-license"
+            class="modal-form-check hidden-title"
+            required
+          />
+          <label for="agree-license" class="agreed-license"
+            >Погоджуюся з розсилкою та приймаю&nbsp<a
+              href=""
+              class="agreed-license__link link"
+              >Умови договору</a
+            ></label
+          >
+          <button type="submit" class="modal-send-btn">Відправити</button>
+        </form>
+      </div>
     </div>
-  </div>
-  
-  <script src="./js/modal.js"></script> -->
+
+    <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
