--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/main.min.css">
-    <!-- <link rel="stylesheet" href="./css/mains.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
@@ -26,7 +25,7 @@
         <a href="./index.html" lang="en" class="logo logo_position link"
           >Web<span class="logo_theme-light">Studio</span>
         </a>
-        <button type="button" class="btn mobile-menu_open" data-menu-open>
+        <button type="button" class="mobile-menu_open" data-menu-open>
           <svg width="24" height="16">
             <use href="./image/icon/burger-icon.svg#burger-icon"></use>
           </svg>
@@ -70,7 +69,7 @@
       </div>
       <div class="mobile-menu" data-menu>
         <div class="container mobile-menu__container">
-          <button type="button" class="btn mobile-menu_close" data-menu-close>
+          <button type="button" class="mobile-menu_close" data-menu-close>
             <svg width="19" height="19">
               <use href="./image/icon/sprites.svg#icon-close"></use>
             </svg>
