--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!--HEADER-->
     <header class="page-header">
-      <div class="container page-header_line">
+      <div class="container page-header__container">
         <a href="./index.html" lang="en" class="logo logo_position link"
           >Web<span class="logo_theme-light">Studio</span>
         </a>
@@ -115,14 +115,14 @@
     </header>
     <main>
       <!--HERO-->
-      <section class="hero section">
+      <!-- <section class="hero section">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="btn" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section>
+      </section> -->
       <!--Преимущества компании -->
       <!-- <section class="section">
       <div class="container">
