--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
     </header>
     <main>
       <!--HERO-->
-      <!-- <section class="hero section">
+      <section class="hero section">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="btn" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section> -->
+      </section>
       <!--Преимущества компании -->
       <!-- <section class="section">
       <div class="container">
