--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             </li>
           </ul>
         </nav>
-        <ul class="header-contacts list">
-          <li class="contact">
-            <a href="mailto:info@devstudio.com" class="contact__item link">
+        <ul class="header-contact list">
+          <li class="contact__item">
+            <a href="mailto:info@devstudio.com" class="contact__mail link">
               <svg class="contact__icon" width="16" height="12">
                 <use href="./image/icon/sprites.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="contacts">
-            <a href="tel:+380961111111" class="contact__item link">
+          <li class="contact__item">
+            <a href="tel:+380961111111" class="contact__phone link">
               <svg class="contact__icon" width="10" height="16">
                 <use href="./image/icon/sprites.svg#icon-smartphone"></use>
               </svg>
@@ -93,7 +93,7 @@
               </li>
             </ul>
           </nav>
-          <ul class="header-contacts list">
+          <ul class="header-contact list">
             <li class="contact">
               <a href="mailto:info@devstudio.com" class="contact__item link">
                 <svg class="contact__icon" width="16" height="12">
