--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >Web<span class="logo_theme-light">Studio</span>
         </a>
         <button type="button" class="mobile-menu_open" data-menu-open>
-          <svg width="24" height="16">
+          <svg class="mobile-menu__icon" width="24" height="16">
             <use href="./image/icon/burger-icon.svg#burger-icon"></use>
           </svg>
         </button>
