--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,12 @@
             <li class="nav-menu__item">
               <a
                 href="./index.html"
-                class="nav-menu__link nav-menu__link_active link"
+                class="nav-menu__link link"
                 >Студія</a
               >
             </li>
             <li class="nav-menu__item">
-              <a href="./portfolio.html" class="nav-menu__link link"
+              <a href="./portfolio.html" class="nav-menu__link nav-menu__link_active link"
                 >Портфоліо</a
               >
             </li>
@@ -78,12 +78,10 @@
               <li class="nav-menu__item">
                 <a
                   href="./index.html"
-                  class="nav-menu__link nav-menu__link_active link"
-                  >Студія</a
-                >
+                  class="nav-menu__link link">Студія</a>
               </li>
               <li class="nav-menu__item">
-                <a href="./portfolio.html" class="nav-menu__link link"
+                <a href="./portfolio.html" class="nav-menu__link nav-menu__link_active link"
                   >Портфоліо</a
                 >
               </li>
@@ -362,5 +360,6 @@
           </div>
         </div>
       </footer>
+      <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
