--- a/index.html
+++ b/index.html
@@ -124,57 +124,60 @@
         </div>
       </section>
       <!--Преимущества компании -->
-      <!-- <section class="section">
-      <div class="container">
-        <h2 class="hidden-title">--Hidden--Преимущества компании-----</h2>
-        <ul class="distinctive-list list">
-          <li class="distinctive">
-            <div class="distinctive__block">
-              <svg class="distinctive__icon">
-                <use href="./image/icon/sprites.svg#icon-antenna"></use>
-              </svg>
-            </div>
-            <h3 class="distinctive__title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="distinctive__text">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li class="distinctive">
-            <div class="distinctive__block">
-              <svg class="distinctive__icon">
-                <use href="./image/icon/sprites.svg#icon-clock"></use>
-              </svg>
-            </div>
-            <h3 class="distinctive__title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="distinctive__text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li class="distinctive">
-            <div class="distinctive__block">
-              <svg class="distinctive__icon">
-                <use href="./image/icon/sprites.svg#icon-diagram"></use>
-              </svg>
-            </div>
-            <h3 class="distinctive__title">ПЛАНУВАННЯ</h3>
-            <p class="distinctive__text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li class="distinctive">
-            <div class="distinctive__block">
-              <svg class="distinctive__icon">
-                <use href="./image/icon/sprites.svg#icon-astronaut"></use>
-              </svg>
-            </div>
-            <h3 class="distinctive__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="distinctive__text">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section> -->
+      <section class="section">
+        <div class="container">
+          <h2 class="hidden-title">--Hidden--Преимущества компании-----</h2>
+          <ul class="advantage list">
+            <li class="advantage__item">
+              <div class="advantage__block">
+                <svg class="advantage__icon">
+                  <use href="./image/icon/sprites.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <h3 class="advantage__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="advantage__text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="advantage__item">
+              <div class="advantage__block">
+                <svg class="advantage__icon">
+                  <use href="./image/icon/sprites.svg#icon-clock"></use>
+                </svg>
+              </div>
+              <h3 class="advantage__title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="advantage__text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="advantage__item">
+              <div class="advantage__block">
+                <svg class="advantage__icon">
+                  <use href="./image/icon/sprites.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="advantage__title">ПЛАНУВАННЯ</h3>
+              <p class="advantage__text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="advantage__item">
+              <div class="advantage__block">
+                <svg class="advantage__icon">
+                  <use href="./image/icon/sprites.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="advantage__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="advantage__text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
       <!--Чем занимаемся -->
       <!-- <section class="section what-engage">
       <div class="container">
