--- a/index.html
+++ b/index.html
@@ -179,25 +179,40 @@
         </div>
       </section>
       <!--Чем занимаемся -->
-      <!-- <section class="section what-engage">
-      <div class="container">
-        <h2 class="section__title">Чим ми займаємося</h2>
-        <ul class="engage-list list">
-          <li class="engage">
-            <img src="./image/box1-sq.jpg" alt="written-code" width="370" height="294" />
-            <p class="engage__inform">Десктопні додатки</p>
-          </li>
-          <li class="engage">
-            <img src="./image/box2-sq.jpg" alt="notebook-phone" width="370" height="294" />
-            <p class="engage__inform">Мобільні додатки</p>
-          </li>
-          <li class="engage">
-            <img src="./image/box3-sq.jpg" alt="graphics-tablet" width="370" height="294" />
-            <p class="engage__inform">Дизайнерські рішення</p>
-          </li>
-        </ul>
-      </div>
-    </section> -->
+      <section class="section what-engage">
+        <div class="container">
+          <h2 class="section__title">Чим ми займаємося</h2>
+          <ul class="engage-list list">
+            <li class="engage">
+              <img
+                src="./image/box1-sq.jpg"
+                alt="written-code"
+                width="370"
+                height="294"
+              />
+              <p class="engage__inform">Десктопні додатки</p>
+            </li>
+            <li class="engage">
+              <img
+                src="./image/box2-sq.jpg"
+                alt="notebook-phone"
+                width="370"
+                height="294"
+              />
+              <p class="engage__inform">Мобільні додатки</p>
+            </li>
+            <li class="engage">
+              <img
+                src="./image/box3-sq.jpg"
+                alt="graphics-tablet"
+                width="370"
+                height="294"
+              />
+              <p class="engage__inform">Дизайнерські рішення</p>
+            </li>
+          </ul>
+        </div>
+      </section>
       <!--Наша команда-->
       <!-- <section class="section section_theme-dark">
       <div class="container">
