--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
     <footer class="footer">
     <div class="container footer__block">
       <div class="footer__block_first">
-        <a href="./index.html" lang="en" class="logo  link">Web<span class="logo_theme-dark">Studio</span></a>
+        <a href="./index.html" lang="en" class="logo footer__logo link">Web<span class="logo_theme-dark">Studio</span></a>
         <address class="address">
           <ul class="list">
             <li class="address__item">
