--- a/portfolio.html
+++ b/portfolio.html
@@ -294,72 +294,72 @@
     </main>
     <!-- Футер -->
       <footer class="footer">
-        <div class="container footer__block">
-          <div class="footer__block_first">
-            <a href="./index.html" lang="en" class="logo  link">Web<span class="logo_theme_dark">Studio</span></a>
-            <address class="address">
-              <ul class="list">
-                <li class="address__item">
-                  <a href="https://goo.gl/maps/Jku4d1xR5NEidK218" target="_blank" rel="noopener noreferrer"
-                    title="Google maps" class="address__map link">м. Київ, пр-т Лесі Українки, 26</a>
-                </li>
-                <li class="address__item">
-                  <a href="mailto:info@example.com" class="address__contact link">info@example.com</a>
-                </li>
-                <li class="address__item">
-                  <a href="tel:+380991111111" class="address__contact link">+38 099 111 11 11</a>
-                </li>
-              </ul>
-            </address>
-          </div>
-          <div class="footer__block_second">
-            <p class="footer__subtitle">приєднуйтесь</p>
-            <ul class="social-list list">
-              <li class="social-item">
-                <a href="" class="social-link">
-                  <svg class="social-footer-icon">
-                    <use href="./image/icon/sprites.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a href="" class="social-link">
-                  <svg class="social-footer-icon">
-                    <use href="./image/icon/sprites.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a href="" class="social-link">
-                  <svg class="social-footer-icon">
-                    <use href="./image/icon/sprites.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a href="" class="social-link">
-                  <svg class="social-footer-icon">
-                    <use href="./image/icon/sprites.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer__block_third">
-            <p class="footer__subtitle">Підпишіться на розсилку</p>
-            <form class="subscribe-form">
-              <label for="subscribe-email" class="subscribe-write"><span class="subscribe-write-text">E-mail</span>
-                <input type="email" name="email" id="subscribe-email" class="subscribe-add-mail">
-              </label>
-              <button type="submit" class="subscribe-btn">Підписатися
-                <svg class="subsribe-btn-icon">
-                  <use href="./image/icon/sprites.svg#icon-send"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
-        </div>
-      </footer>
+    <div class="container footer__block">
+      <div class="footer__block_first">
+        <a href="./index.html" lang="en" class="logo footer__logo link">Web<span class="logo_theme-dark">Studio</span></a>
+        <address class="address">
+          <ul class="list">
+            <li class="address__item">
+              <a href="https://goo.gl/maps/Jku4d1xR5NEidK218" target="_blank" rel="noopener noreferrer"
+                title="Google maps" class="address__map link">м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li class="address__item">
+              <a href="mailto:info@example.com" class="address__contact link">info@example.com</a>
+            </li>
+            <li class="address__item">
+              <a href="tel:+380991111111" class="address__contact link">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="footer__block_second">
+        <p class="footer__subtitle">приєднуйтесь</p>
+        <ul class="social-list list">
+          <li class="social-item">
+            <a href="" class="social-link">
+              <svg class="social-footer-icon">
+                <use href="./image/icon/sprites.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link">
+              <svg class="social-footer-icon">
+                <use href="./image/icon/sprites.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link">
+              <svg class="social-footer-icon">
+                <use href="./image/icon/sprites.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link">
+              <svg class="social-footer-icon">
+                <use href="./image/icon/sprites.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__block_third">
+        <p class="footer__subtitle">Підпишіться на розсилку</p>
+        <form class="subscribe-form">
+          <label for="subscribe-email" class="subscribe-write"><span class="subscribe-write-text">E-mail</span>
+            <input type="email" name="email" id="subscribe-email" class="subscribe-add-mail">
+          </label>
+          <button type="submit" class="subscribe-btn">Підписатися
+            <svg class="subsribe-btn-icon">
+              <use href="./image/icon/sprites.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
+    </div>
+  </footer>
       <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
