test-mobile-window3

--- a/index.html
+++ b/index.html
@@ -94,14 +94,7 @@
             </ul>
           </nav>
           <ul class="contact list">
-          <li class="contact__item">
-            <a href="mailto:info@devstudio.com" class="contact__mail link">
-              <svg class="contact__icon" width="16" height="12">
-                <use href="./image/icon/sprites.svg#icon-envelope"></use></svg
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact__item">
+            <li class="contact__item">
             <a href="tel:+380961111111" class="contact__phone link">
               <svg class="contact__icon" width="10" height="16">
                 <use href="./image/icon/sprites.svg#icon-smartphone"></use>
@@ -109,6 +102,23 @@
               +38 096 111 11 11
             </a>
           </li>
+          <li class="contact__item">
+            <a href="mailto:info@devstudio.com" class="contact__mail link">
+              <svg class="contact__icon" width="16" height="12">
+                <use href="./image/icon/sprites.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-social list">
+          <li class="mobile-social__item">
+            <a href="" class="mobile-social__link link">Instagram</a></li>
+          <li class="mobile-social__item">
+            <a href="" class="mobile-social__link link">Twitter</a></li>
+          <li class="mobile-social__item">
+            <a href="" class="mobile-social__link link">Facebook</a></li>
+          <li class="mobile-social__item">
+            <a href="" class="mobile-social__link link">LinkedIn</a></li>
         </ul>
         </div>
       </div>
