--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--хедер-->
-         <header class="page-header">
+          <header class="page-header">
       <div class="container page-header__container">
         <a href="./index.html" lang="en" class="logo logo_position link"
           >Web<span class="logo_theme-light">Studio</span>
@@ -34,7 +34,7 @@
             <li class="nav-menu__item">
               <a
                 href="./index.html"
-                class="nav-menu__link link"
+                class="nav-menu__link nav-menu__link_active link"
                 >Студія</a
               >
             </li>
@@ -48,7 +48,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="header-contact list">
+        <ul class="contact list">
           <li class="contact__item">
             <a href="mailto:info@devstudio.com" class="contact__mail link">
               <svg class="contact__icon" width="16" height="12">
@@ -78,7 +78,9 @@
               <li class="nav-menu__item">
                 <a
                   href="./index.html"
-                  class="nav-menu__link link">Студія</a>
+                  class="nav-menu__link link"
+                  >Студія</a
+                >
               </li>
               <li class="nav-menu__item">
                 <a href="./portfolio.html" class="nav-menu__link nav-menu__link_active link"
@@ -90,23 +92,33 @@
               </li>
             </ul>
           </nav>
-          <ul class="header-contact list">
-            <li class="contact">
-              <a href="mailto:info@devstudio.com" class="contact__item link">
-                <svg class="contact__icon" width="16" height="12">
-                  <use href="./image/icon/sprites.svg#icon-envelope"></use></svg
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="contacts">
-              <a href="tel:+380961111111" class="contact__item link">
-                <svg class="contact__icon" width="10" height="16">
-                  <use href="./image/icon/sprites.svg#icon-smartphone"></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
+          <ul class="contact list">
+            <li class="contact__item">
+            <a href="tel:+380961111111" class="contact__phone link">
+              <svg class="contact__icon" width="10" height="16">
+                <use href="./image/icon/sprites.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
+          <li class="contact__item">
+            <a href="mailto:info@devstudio.com" class="contact__mail link">
+              <svg class="contact__icon" width="16" height="12">
+                <use href="./image/icon/sprites.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-social list">
+          <li class="mobile-social__item">
+            <a href="" class="mobile-social__link link">Instagram</a></li>
+          <li class="mobile-social__item">
+            <a href="" class="mobile-social__link link">Twitter</a></li>
+          <li class="mobile-social__item">
+            <a href="" class="mobile-social__link link">Facebook</a></li>
+          <li class="mobile-social__item">
+            <a href="" class="mobile-social__link link">LinkedIn</a></li>
+        </ul>
         </div>
       </div>
     </header>
