testing in phone all

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             <li class="nav-menu__item">
               <a
                 href="./index.html"
-                class="nav-menu__link nav-menu__link_active link"
+                class="nav-menu__link link"
                 >Студія</a
               >
             </li>
