--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
           <ul class="making list">
             <li class="making__item">
               <img
-                src="./image/box1-sq.jpg"
+              srcset="./image/making/desctop-apps.jpg 1x, ./image/making/desctop-apps@2x.jpg 2x, ./image/making/desctop-apps@3x.jpg 3x"
+                src="./image/making/desctop-apps.jpg"
                 alt="written-code"
                 width="370"
                 height="294"
@@ -204,7 +205,8 @@
             </li>
             <li class="making__item">
               <img
-                src="./image/box2-sq.jpg"
+              srcset="./image/making/mobile-apps.jpg 1x, ./image/making/mobile-apps@2x.jpg 2x, ./image/making/mobile-apps@3x.jpg 3x"
+                src="./image/making/mobile-apps.jpg"
                 alt="notebook-phone"
                 width="370"
                 height="294"
@@ -213,7 +215,8 @@
             </li>
             <li class="making__item">
               <img
-                src="./image/box3-sq.jpg"
+              srcset="./image/making/design.jpg 1x, ./image/making/design@2x.jpg 2x, ./image/making/design@3x.jpg 3x"
+                src="./image/making/design.jpg"
                 alt="graphics-tablet"
                 width="370"
                 height="294"
