--- a/index.html
+++ b/index.html
@@ -241,31 +241,31 @@
             <div class="employee__content">
               <h3 class="employee__name">Ігор Дем'яненко</h3>
               <p lang="en" class="employee__profesion">Product Designer</p>
-              <ul class="list employees-social">
+              <ul class="list social">
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class=" social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class=" social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class=" social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class=" social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -283,31 +283,31 @@
             <div class="employee__content">
               <h3 class="employee__name">Ольга Рєпіна</h3>
               <p lang="en" class="employee__profesion">Frontend Developer</p>
-              <ul class="list employees-social">
+              <ul class="list social">
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -322,34 +322,34 @@
              <source srcset="./image/employees/optimaze-mobile/mobile-mukola.jpg 1x, ./image/employees/optimaze-mobile/mobile-mukola@2x.jpg 2x, ./image/employees/optimaze-mobile/mobile-mukola@3x.jpg 3x" media="(max-width: 767px)"/>
              <img class="employee__photo" src="./image/employees/optimaze-mobile/mobile-mukola.jpg" alt="photo-card-mukola"/>
             </picture>
-                        <div class="employee__content">
+            <div class="employee__content">
               <h3 class="employee__name">Микола Тарасов</h3>
               <p lang="en" class="employee__profesion">Marketing</p>
-              <ul class="list employees-social">
+              <ul class="list social">
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -367,31 +367,31 @@
                         <div class="employee__content">
               <h3 class="employee__name">Михайло Єрмаков</h3>
               <p lang="en" class="employee__profesion">UI Designer</p>
-              <ul class="list employees-social">
+              <ul class="list social">
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="employee-social">
-                  <a href="" class="employee-social__link">
-                    <svg class="employee-social__icon">
+                  <a href="" class="social__link social__link_employee-theme">
+                    <svg class="social__icon">
                       <use href="./image/icon/sprites.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -475,31 +475,31 @@
       </div>
       <div class="footer__block_second">
         <p class="footer__subtitle">приєднуйтесь</p>
-        <ul class="social-list list">
+        <ul class="social list">
           <li class="social-item">
-            <a href="" class="social-link">
-              <svg class="social-footer-icon">
+            <a href="" class="social__link social__link_footer-theme">
+              <svg class="social__icon social__icon_theme-dark">
                 <use href="./image/icon/sprites.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
-            <a href="" class="social-link">
-              <svg class="social-footer-icon">
+            <a href="" class="social__link social__link_footer-theme">
+              <svg class="social__icon social__icon_theme-dark">
                 <use href="./image/icon/sprites.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
-            <a href="" class="social-link">
-              <svg class="social-footer-icon">
+            <a href="" class="social__link social__link_footer-theme">
+              <svg class="social__icon social__icon_theme-dark">
                 <use href="./image/icon/sprites.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
-            <a href="" class="social-link">
-              <svg class="social-footer-icon">
+            <a href="" class="social__link social__link_footer-theme">
+              <svg class="social__icon social__icon_theme-dark">
                 <use href="./image/icon/sprites.svg#icon-linkedin"></use>
               </svg>
             </a>
