--- a/portfolio.html
+++ b/portfolio.html
@@ -358,31 +358,31 @@
       </div>
       <div class="footer__block_second">
         <p class="footer__subtitle">приєднуйтесь</p>
-        <ul class="social-list list">
+        <ul class="social list">
           <li class="social-item">
-            <a href="" class="social-link">
-              <svg class="social-footer-icon">
+            <a href="" class="social__link social__link_footer-theme">
+              <svg class="social__icon social__icon_theme-dark">
                 <use href="./image/icon/sprites.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
-            <a href="" class="social-link">
-              <svg class="social-footer-icon">
+            <a href="" class="social__link social__link_footer-theme">
+              <svg class="social__icon social__icon_theme-dark">
                 <use href="./image/icon/sprites.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
-            <a href="" class="social-link">
-              <svg class="social-footer-icon">
+            <a href="" class="social__link social__link_footer-theme">
+              <svg class="social__icon social__icon_theme-dark">
                 <use href="./image/icon/sprites.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
-            <a href="" class="social-link">
-              <svg class="social-footer-icon">
+            <a href="" class="social__link social__link_footer-theme">
+              <svg class="social__icon social__icon_theme-dark">
                 <use href="./image/icon/sprites.svg#icon-linkedin"></use>
               </svg>
             </a>
